--- a/package.json
+++ b/package.json
@@ -6,10 +6,29 @@
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.17",
+    "@chakra-ui/react": "^2.4.9",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@next/font": "13.1.6",
+    "@types/node": "18.11.18",
+    "@types/react": "18.0.27",
+    "@types/react-dom": "18.0.10",
+    "chart.js": "^4.2.1",
+    "cookies-next": "^2.1.1",
+    "eslint": "8.33.0",
+    "eslint-config-next": "13.1.6",
+    "framer-motion": "^9.0.1",
     "next": "latest",
+    "next-auth": "^4.19.2",
     "next-pwa": "^5.6.0",
+    "pocketbase": "^0.10.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-calendar": "^4.1.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.8",
+    "typescript": "4.9.4"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
