--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Next.JS Progressive Web App",
-  "short_name": "Next PWA",
+  "name": "Huvudskott.se",
+  "short_name": "Huvudskott",
   "theme_color": "#ffffff",
   "background_color": "#004740",
   "display": "fullscreen",
