--- a/package.json
+++ b/package.json
@@ -23,16 +23,18 @@
     "pocketbase": "^0.10.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-transition-group": "^4.4.5",
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@types/react-transition-group": "^4.4.6",
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
-    "eslint-config-prettier": "^8.8.0",
     "autoprefixer": "^10.4.15",
+    "eslint-config-prettier": "^8.8.0",
     "postcss": "^8.4.28",
-    "tailwindcss": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.4.1",
+    "tailwindcss": "^3.3.3",
     "typescript": "4.5.4"
   }
 }
