--- a/package.json
+++ b/package.json
@@ -16,15 +16,16 @@
     "next-auth": "^4.19.2",
     "next-pwa": "^5.6.0",
     "pocketbase": "^0.10.1",
+    "prettier": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-transition-group": "^4.4.5",
     "typescript": "4.9.4"
   },
   "devDependencies": {
-    "@types/react-transition-group": "^4.4.6",
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
+    "@types/react-transition-group": "^4.4.6",
     "autoprefixer": "^10.4.15",
     "eslint-config-prettier": "^8.8.0",
     "postcss": "^8.4.28",
