--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,49 +2,49 @@
   "name": "Huvudskott.se",
   "short_name": "Huvudskott",
   "theme_color": "#ffffff",
-  "background_color": "#004740",
+  "background_color": "#07141f",
   "display": "fullscreen",
   "orientation": "portrait",
   "scope": "/",
   "start_url": "/",
   "icons": [
     {
-      "src": "icons/icon-72x72.png",
+      "src": "icons/72.png",
       "sizes": "72x72",
       "type": "image/png"
     },
     {
-      "src": "icons/icon-96x96.png",
-      "sizes": "96x96",
+      "src": "icons/100.png",
+      "sizes": "100x100",
       "type": "image/png"
     },
     {
-      "src": "icons/icon-128x128.png",
+      "src": "icons/128.png",
       "sizes": "128x128",
       "type": "image/png"
     },
     {
-      "src": "icons/icon-144x144.png",
+      "src": "icons/144.png",
       "sizes": "144x144",
       "type": "image/png"
     },
     {
-      "src": "icons/icon-152x152.png",
+      "src": "icons/152.png",
       "sizes": "152x152",
       "type": "image/png"
     },
     {
-      "src": "icons/icon-192x192.png",
+      "src": "icons/192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "icons/icon-384x384.png",
-      "sizes": "384x384",
+      "src": "icons/256.png",
+      "sizes": "256x256",
       "type": "image/png"
     },
     {
-      "src": "icons/icon-512x512.png",
+      "src": "icons/512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
