--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "18.0.10",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "facebook-chat-api": "^1.8.0",
     "next": "latest",
     "next-auth": "^4.19.2",
     "next-pwa": "^5.6.0",
